--- a/notebooks/train_raytracer2.ipynb
+++ b/notebooks/train_raytracer2.ipynb
@@ -196,6 +196,24 @@
     "\n",
     "\n",
     "def main(args):\n",
+    "    if args.seed is not None:\n",
+    "        tf.random.set_seed(args.seed)\n",
+    "        np.random.seed(args.seed)\n",
+    "    if args.json_override is not None:\n",
+    "        if isinstance(args.json_override, list):\n",
+    "            files = args.json_override\n",
+    "        else:\n",
+    "            files = [args.json_override,]\n",
+    "        for file in files:\n",
+    "            with open(file, \"r\") as f:\n",
+    "                json_override = json.load(f)\n",
+    "            args_dict = vars(args)\n",
+    "            args_dict.update(json_override)\n",
+    "    if args.v2: # overwrite decoding procedure with version 2\n",
+    "        from censai.data.alpha_tng_v2 import decode_train, decode_physical_info\n",
+    "    else:\n",
+    "        from censai.data.alpha_tng import decode_train, decode_physical_info\n",
+    "    # ========= Dataset=================================================================================================\n",
     "    files = []\n",
     "    for dataset in args.datasets:\n",
     "        files.extend(glob.glob(os.path.join(dataset, \"*.tfrecords\")))\n",
@@ -286,6 +304,7 @@
     "    else:\n",
     "        save_checkpoint = False\n",
     "    # =================================================================================================================\n",
+    "\n",
     "    def train_step(inputs):\n",
     "        kappa, alpha = inputs\n",
     "        with tf.GradientTape(watch_accessed_variables=True) as tape:\n",
@@ -324,21 +343,26 @@
     "    epoch_loss = tf.metrics.Mean()\n",
     "    val_loss = tf.metrics.Mean()\n",
     "    time_per_step = tf.metrics.Mean()\n",
-    "    best_loss = np.inf\n",
-    "    patience = args.patience\n",
-    "    step = 1\n",
     "    history = {  # recorded at the end of an epoch only\n",
     "        \"train_cost\": [],\n",
     "        \"train_lens_residuals\": [],\n",
-    "#         \"val_cost\": [],\n",
-    "#         \"val_lens_residuals\": [],\n",
+    "        \"val_cost\": [],\n",
+    "        \"val_lens_residuals\": [],\n",
     "        \"learning_rate\": [],\n",
     "        \"step\": [],\n",
     "        \"wall_time\": []\n",
     "    }\n",
+    "    best_loss = np.inf\n",
     "    global_start = time.time()\n",
+    "    estimated_time_for_epoch = 0\n",
+    "    out_of_time = False\n",
+    "    patience = args.patience\n",
+    "    step = 0\n",
     "    lastest_checkpoint = 1\n",
     "    for epoch in range(1, args.epochs + 1):\n",
+    "        if (time.time() - global_start) > args.max_time*3600 - estimated_time_for_epoch:\n",
+    "            break\n",
+    "        epoch_start = time.time()\n",
     "        epoch_loss.reset_states()\n",
     "        time_per_step.reset_states()\n",
     "        with writer.as_default():\n",
@@ -347,50 +371,68 @@
     "                cost = distributed_train_step(distributed_inputs)\n",
     "        # ========== Summary and logs ==================================================================================\n",
     "                _time = time.time() - start\n",
-    "#                 tf.summary.scalar(\"Time per step\", _time, step=step)\n",
     "                time_per_step.update_state([_time])\n",
     "                epoch_loss.update_state([cost])\n",
-    "#                 tf.summary.scalar(\"MSE\", cost, step=step)\n",
     "                step += 1\n",
+    "\n",
     "            # Deflection angle residual\n",
     "            kappa_true, alpha_true = distributed_inputs\n",
     "            alpha_pred = ray_tracer.call(kappa_true)\n",
     "            # Lens residual\n",
-    "            lens_true = phys.lens_source_func(kappa_true)\n",
+    "            lens_true = phys.lens_source_func(kappa_true, w=args.source_w)\n",
     "            lens_pred = phys.lens_source_func_given_alpha(alpha_pred, w=args.source_w)\n",
     "            train_chi_squared = tf.reduce_mean(tf.square(lens_true - lens_pred))\n",
     "            for res_idx in range(min(args.n_residuals, args.batch_size)):  # Residuals in train set\n",
     "                tf.summary.image(f\"Residuals {res_idx}\",\n",
     "                                 plot_to_image(residual_plot(alpha_true[res_idx], alpha_pred[res_idx], lens_true[res_idx], lens_pred[res_idx])), step=step)\n",
     "\n",
+    "        # ========== Validation set ===================\n",
+    "            val_loss.reset_states()\n",
+    "            for distributed_inputs in val_dataset:  # Cost of val set\n",
+    "                test_cost = distributed_test_step(distributed_inputs)\n",
+    "                val_loss.update_state([test_cost])\n",
+    "\n",
+    "            kappa_true, alpha_true = distributed_inputs\n",
+    "            alpha_pred = ray_tracer.call(kappa_true)\n",
+    "            lens_true = phys.lens_source_func(kappa_true, args.source_w)\n",
+    "            lens_pred = phys.lens_source_func_given_alpha(alpha_pred, w=args.source_w)\n",
+    "            val_chi_squared = tf.reduce_mean(tf.square(lens_true - lens_pred))\n",
+    "            for res_idx in range(min(args.n_residuals, args.batch_size)):  # Residuals in val set\n",
+    "                tf.summary.image(f\"Val Residuals {res_idx}\",\n",
+    "                                 plot_to_image(residual_plot(alpha_true[res_idx], alpha_pred[res_idx], lens_true[res_idx], lens_pred[res_idx])), step=step)\n",
+    "\n",
     "            train_cost = epoch_loss.result().numpy()\n",
     "            val_cost = val_loss.result().numpy()\n",
     "            tf.summary.scalar(\"Time per step\", time_per_step.result().numpy(), step=step)\n",
-    "#             tf.summary.scalar(\"Train lens residual\", train_chi_squared, step=step)\n",
-    "#             tf.summary.scalar(\"Val lens residual\", val_chi_squared, step=step)\n",
+    "            tf.summary.scalar(\"Train lens residual\", train_chi_squared, step=step)\n",
+    "            tf.summary.scalar(\"Val lens residual\", val_chi_squared, step=step)\n",
     "            tf.summary.scalar(\"MSE\", train_cost, step=step)\n",
-    "#             tf.summary.scalar(\"Val MSE\", val_cost, step=step)\n",
+    "            tf.summary.scalar(\"Val MSE\", val_cost, step=step)\n",
     "            tf.summary.scalar(\"Learning rate\", optim.lr(step), step=step)\n",
     "        print(f\"epoch {epoch} | train loss {train_cost:.3e} | val loss {val_cost:.3e} | learning rate {optim.lr(step).numpy():.2e} | \"\n",
     "              f\"time per step {time_per_step.result():.2e} s\")\n",
     "        history[\"train_cost\"].append(train_cost)\n",
     "        history[\"train_lens_residuals\"].append(train_chi_squared.numpy())\n",
-    "#         history[\"val_cost\"].append(val_cost)\n",
-    "#         history[\"val_lens_residuals\"].append(val_chi_squared.numpy())\n",
+    "        history[\"val_cost\"].append(val_cost)\n",
+    "        history[\"val_lens_residuals\"].append(val_chi_squared.numpy())\n",
     "        history[\"learning_rate\"].append(optim.lr(step).numpy())\n",
     "        history[\"step\"].append(step)\n",
     "        history[\"wall_time\"].append(time.time() - global_start)\n",
-    "        # =============================================================================================================\n",
+    "\n",
     "        cost = train_cost if args.track_train else val_cost\n",
+    "        if np.isnan(cost):\n",
+    "            print(\"Training broke the Universe\")\n",
+    "            break\n",
     "        if cost < best_loss * (1 - args.tolerance):\n",
     "            best_loss = cost\n",
     "            patience = args.patience\n",
     "        else:\n",
     "            patience -= 1\n",
-    "\n",
+    "        if (time.time() - global_start) > args.max_time * 3600:\n",
+    "            out_of_time = True\n",
     "        if save_checkpoint:\n",
     "            checkpoint_manager.checkpoint.step.assign_add(1)  # a bit of a hack\n",
-    "            if epoch % args.checkpoints == 0 or patience == 0 or epoch == args.epochs - 1:\n",
+    "            if epoch % args.checkpoints == 0 or patience == 0 or epoch == args.epochs - 1 or out_of_time:\n",
     "                with open(os.path.join(checkpoints_dir, \"score_sheet.txt\"), mode=\"a\") as f:\n",
     "                    np.savetxt(f, np.array([[lastest_checkpoint, cost]]))\n",
     "                lastest_checkpoint += 1\n",
@@ -398,6 +440,13 @@
     "                print(\"Saved checkpoint for step {}: {}\".format(int(checkpoint_manager.checkpoint.step), checkpoint_manager.latest_checkpoint))\n",
     "        if patience == 0:\n",
     "            print(\"Reached patience\")\n",
+    "            break\n",
+    "        if out_of_time:\n",
+    "            break\n",
+    "        if epoch > 0:  # First epoch is always very slow and not a good estimate of an epoch time.\n",
+    "            estimated_time_for_epoch = time.time() - epoch_start\n",
+    "        if optim.lr(step).numpy() < 1e-9:\n",
+    "            print(\"Reached learning rate limit\")\n",
     "            break\n",
     "    return ray_tracer, phys, train_dataset, dataset, history, logname"
    ]
@@ -516,8 +565,8 @@
     "sys.argv = ['']\n",
     "args = parser.parse_args(\n",
     "#   f\"--datasets {os.getenv('HOME')}/scratch/Censai/data/alpha128_TNG100 {os.getenv('HOME')}/scratch/Censai/data/alpha128_NIS \"\\\n",
-    "  f\"--datasets {os.getenv('CENSAI_PATH')}/data/alpha128_512_hTNG_15k {os.getenv('CENSAI_PATH')}/data/alpha128_512_TNG {os.getenv('CENSAI_PATH')}/data/alpha128_512_SIE_15k \"\\\n",
-    "  f\"--total_items=45000 \"\\\n",
+    "  f\"--datasets {os.getenv('CENSAI_PATH')}/data/alpha512_SIE_trainset \"\\\n",
+    "  f\"--total_items=15000 \"\\\n",
     "  f\"--epochs=10 \"\\\n",
     "  f\"--train_split=0.95 \"\\\n",
     "  f\"--compression_type=GZIP \"\\\n",
