--- a/notebooks/optimizer_on_rim_pred.ipynb
+++ b/notebooks/optimizer_on_rim_pred.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "33079bfd-ede7-41c2-9a7e-41a232ce638e",
+   "execution_count": 4,
+   "id": "cosmetic-trance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "dc111933-716b-47d2-8273-d7ddbfb341e2",
+   "execution_count": 5,
+   "id": "killing-needle",
    "metadata": {},
    "outputs": [],
    "source": [
     "# model = \"RIMSU512_k128_NIE2nsvdO_033_TS10_F16_L5_IK11_NLrelu_al0.04_GAplus_42_B10_lr0.0005_dr0.8_ds5000_TWquadratic_210923032150\"\n",
     "model = \"RIMSU128_hTNG2nsvdO_Sinit1_001_F16_IK11_NLleaky_relu_128_211012121338\"\n",
-    "path = os.path.join(os.getenv(\"CENSAI_PATH\"), \"data\", \"rim_predictions\", model, \"predictions.h5\")\n",
+    "path = os.path.join(os.getenv(\"CENSAI_PATH\"), \"data\", \"rim_predictions\", model, \"prediction.h5\")\n",
     "hf = h5py.File(path, 'r')\n",
     "k = 8\n",
     "\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b44a891a-c14b-4c90-b83a-ba9b295f11d4",
+   "id": "accessible-stylus",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "41fa5a32-9933-4af1-abb0-988ee12fdd05",
+   "id": "vertical-potter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "eb903ce5-ecad-4512-9f74-2e7f9046f16a",
+   "id": "personal-example",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "6ab93b03-8738-49d5-9700-9ded55199260",
+   "id": "everyday-bunch",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 290,
-   "id": "ac5f90f4-e5bc-4e68-bcf0-a18e0f640213",
+   "id": "tracked-hamburg",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 291,
-   "id": "06ae1947-2761-4d4e-813c-c80d6ea17896",
+   "id": "ready-sport",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "85322705-2ea6-4b2e-89a3-7495778797df",
+   "id": "retired-victory",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "971ab9f3-7d2a-438f-b897-ddf91269667d",
+   "id": "further-fireplace",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "29959bb1-8fe7-4623-b9aa-9c190d698558",
+   "id": "shared-technical",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "0b1aa13f-7874-4c35-b5a9-0d1ac235aa96",
+   "id": "dental-conflict",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "379de935-dbe9-4591-945c-ae09d4f4c85c",
+   "id": "elementary-writer",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "db9b1c43-5318-4268-841a-705cde86481e",
+   "id": "about-spanish",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f099a43-6ce4-4a2b-8ebf-426af9bba505",
+   "id": "breeding-potato",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "57d98032-a28c-4ce6-9833-77ce61004880",
+   "id": "owned-disaster",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "1ecdf6a8-088b-4b4f-a403-1197ad76514b",
+   "id": "assumed-asian",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ee55e0a-87d5-4a77-95a0-8026a76af572",
+   "id": "governmental-jefferson",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -633,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
