adde dnew notebooks

--- a/notebooks/scale_complexity_experiment.ipynb
+++ b/notebooks/scale_complexity_experiment.ipynb
@@ -2454,6 +2454,425 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "464fbc41-a46a-471c-8c45-082c5d46c61a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>steps</th>\n",
+       "      <th>adam</th>\n",
+       "      <th>kappalog</th>\n",
+       "      <th>kappa_normalize</th>\n",
+       "      <th>source_link</th>\n",
+       "      <th>kappa_init</th>\n",
+       "      <th>source_init</th>\n",
+       "      <th>filters</th>\n",
+       "      <th>filter_scaling</th>\n",
+       "      <th>kernel_size</th>\n",
+       "      <th>layers</th>\n",
+       "      <th>block_conv_layers</th>\n",
+       "      <th>strides</th>\n",
+       "      <th>bottleneck_kernel_size</th>\n",
+       "      <th>bottleneck_filters</th>\n",
+       "      <th>resampling_kernel_size</th>\n",
+       "      <th>input_kernel_size</th>\n",
+       "      <th>gru_kernel_size</th>\n",
+       "      <th>upsampling_interpolation</th>\n",
+       "      <th>batch_norm</th>\n",
+       "      <th>dropout_rate</th>\n",
+       "      <th>kernel_l2_amp</th>\n",
+       "      <th>bias_l2_amp</th>\n",
+       "      <th>kernel_l1_amp</th>\n",
+       "      <th>bias_l1_amp</th>\n",
+       "      <th>activation</th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>initializer</th>\n",
+       "      <th>gru_architecture</th>\n",
+       "      <th>batch_size</th>\n",
+       "      <th>total_items</th>\n",
+       "      <th>optimizer</th>\n",
+       "      <th>initial_learning_rate</th>\n",
+       "      <th>decay_rate</th>\n",
+       "      <th>decay_steps</th>\n",
+       "      <th>time_weights</th>\n",
+       "      <th>seed</th>\n",
+       "      <th>experiment_id</th>\n",
+       "      <th>train_cost</th>\n",
+       "      <th>val_cost</th>\n",
+       "      <th>train_chi_squared</th>\n",
+       "      <th>val_chi_squared</th>\n",
+       "      <th>best_score</th>\n",
+       "      <th>train_kappa_cost</th>\n",
+       "      <th>val_kappa_cost</th>\n",
+       "      <th>train_source_cost</th>\n",
+       "      <th>val_source_cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>lrelu4p</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>leaky_relu</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>glorot_normal</td>\n",
+       "      <td>plus</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>ADAMAX</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>quadratic</td>\n",
+       "      <td>128</td>\n",
+       "      <td>RIMSU128_hTNG2nsvdO_Sinit1_001_F16_IK11_NLleaky_relu_128_211012121338</td>\n",
+       "      <td>0.006829</td>\n",
+       "      <td>0.022695</td>\n",
+       "      <td>24.980408</td>\n",
+       "      <td>30.089100</td>\n",
+       "      <td>0.006505</td>\n",
+       "      <td>0.005079</td>\n",
+       "      <td>0.021212</td>\n",
+       "      <td>0.000456</td>\n",
+       "      <td>0.000889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>lrelu4p</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>relu</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>glorot_normal</td>\n",
+       "      <td>plus</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>ADAMAX</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>quadratic</td>\n",
+       "      <td>82</td>\n",
+       "      <td>RIMSU128_hTNG2nsvdO_Sinit1_006_F16_IK11_NLrelu_82_211012122230</td>\n",
+       "      <td>0.008594</td>\n",
+       "      <td>0.024438</td>\n",
+       "      <td>31.884829</td>\n",
+       "      <td>34.194176</td>\n",
+       "      <td>0.008594</td>\n",
+       "      <td>0.006390</td>\n",
+       "      <td>0.022735</td>\n",
+       "      <td>0.000528</td>\n",
+       "      <td>0.000895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>lrelu4p</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>relu</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>glorot_normal</td>\n",
+       "      <td>plus</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>ADAMAX</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>quadratic</td>\n",
+       "      <td>82</td>\n",
+       "      <td>RIMSU128_hTNG2nsvdO_Sinit1_010_F16_IK7_NLrelu_82_211012122812</td>\n",
+       "      <td>0.009069</td>\n",
+       "      <td>0.024146</td>\n",
+       "      <td>30.900210</td>\n",
+       "      <td>29.976883</td>\n",
+       "      <td>0.007803</td>\n",
+       "      <td>0.007884</td>\n",
+       "      <td>0.022757</td>\n",
+       "      <td>0.000540</td>\n",
+       "      <td>0.000832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>lrelu4p</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>leaky_relu</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>glorot_normal</td>\n",
+       "      <td>plus</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>ADAMAX</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>quadratic</td>\n",
+       "      <td>82</td>\n",
+       "      <td>RIMSU128_hTNG2nsvdO_Sinit1_003_F16_IK7_NLleaky_relu_82_211012121355</td>\n",
+       "      <td>0.019951</td>\n",
+       "      <td>0.024975</td>\n",
+       "      <td>44.657745</td>\n",
+       "      <td>39.769405</td>\n",
+       "      <td>0.014577</td>\n",
+       "      <td>0.017842</td>\n",
+       "      <td>0.023004</td>\n",
+       "      <td>0.000841</td>\n",
+       "      <td>0.000943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>lrelu4p</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>leaky_relu</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>glorot_normal</td>\n",
+       "      <td>plus</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>ADAMAX</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>quadratic</td>\n",
+       "      <td>82</td>\n",
+       "      <td>RIMSU128_hTNG2nsvdO_Sinit1_002_F8_IK7_NLleaky_relu_82_211012121338</td>\n",
+       "      <td>0.014457</td>\n",
+       "      <td>0.029068</td>\n",
+       "      <td>47.224670</td>\n",
+       "      <td>64.820404</td>\n",
+       "      <td>0.014400</td>\n",
+       "      <td>0.011435</td>\n",
+       "      <td>0.027241</td>\n",
+       "      <td>0.000924</td>\n",
+       "      <td>0.001258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>lrelu4p</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>relu</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>glorot_normal</td>\n",
+       "      <td>plus</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>ADAMAX</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>quadratic</td>\n",
+       "      <td>82</td>\n",
+       "      <td>RIMSU128_hTNG2nsvdO_Sinit1_004_F8_IK11_NLrelu_82_211012122230</td>\n",
+       "      <td>0.012288</td>\n",
+       "      <td>0.026603</td>\n",
+       "      <td>64.159100</td>\n",
+       "      <td>54.059610</td>\n",
+       "      <td>0.011803</td>\n",
+       "      <td>0.009800</td>\n",
+       "      <td>0.024721</td>\n",
+       "      <td>0.001193</td>\n",
+       "      <td>0.001244</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   steps  adam  kappalog  kappa_normalize source_link  kappa_init  source_init  filters  filter_scaling  kernel_size  layers  block_conv_layers  strides  bottleneck_kernel_size  bottleneck_filters  resampling_kernel_size  input_kernel_size  gru_kernel_size  upsampling_interpolation  batch_norm  dropout_rate  kernel_l2_amp  bias_l2_amp  kernel_l1_amp  bias_l1_amp  activation  alpha    initializer gru_architecture  batch_size  total_items optimizer  initial_learning_rate  decay_rate  decay_steps time_weights  seed                                                          experiment_id  train_cost  val_cost  train_chi_squared  val_chi_squared  best_score  train_kappa_cost  val_kappa_cost  train_source_cost  val_source_cost\n",
+       "0     10     1      True            False     lrelu4p         0.1          1.0       16             2.0            3       4                  2        2                     NaN                 NaN                       3                 11                3                         0           0           NaN              0            0              0            0  leaky_relu    0.1  glorot_normal             plus          10        10000    ADAMAX                 0.0001         0.9        20000    quadratic   128  RIMSU128_hTNG2nsvdO_Sinit1_001_F16_IK11_NLleaky_relu_128_211012121338    0.006829  0.022695          24.980408        30.089100    0.006505          0.005079        0.021212           0.000456         0.000889\n",
+       "5     10     1      True            False     lrelu4p         0.1          1.0       16             2.0            3       4                  2        2                     NaN                 NaN                       3                 11                3                         0           0           NaN              0            0              0            0        relu    0.1  glorot_normal             plus          10        10000    ADAMAX                 0.0001         0.9        20000    quadratic    82         RIMSU128_hTNG2nsvdO_Sinit1_006_F16_IK11_NLrelu_82_211012122230    0.008594  0.024438          31.884829        34.194176    0.008594          0.006390        0.022735           0.000528         0.000895\n",
+       "9     10     1      True            False     lrelu4p         0.1          1.0       16             2.0            3       4                  2        2                     NaN                 NaN                       3                  7                3                         0           0           NaN              0            0              0            0        relu    0.1  glorot_normal             plus          10        10000    ADAMAX                 0.0001         0.9        20000    quadratic    82          RIMSU128_hTNG2nsvdO_Sinit1_010_F16_IK7_NLrelu_82_211012122812    0.009069  0.024146          30.900210        29.976883    0.007803          0.007884        0.022757           0.000540         0.000832\n",
+       "2     10     1      True            False     lrelu4p         0.1          1.0       16             2.0            3       4                  2        2                     NaN                 NaN                       3                  7                3                         0           0           NaN              0            0              0            0  leaky_relu    0.1  glorot_normal             plus          10        10000    ADAMAX                 0.0001         0.9        20000    quadratic    82    RIMSU128_hTNG2nsvdO_Sinit1_003_F16_IK7_NLleaky_relu_82_211012121355    0.019951  0.024975          44.657745        39.769405    0.014577          0.017842        0.023004           0.000841         0.000943\n",
+       "1     10     1      True            False     lrelu4p         0.1          1.0        8             2.0            3       4                  2        2                     NaN                 NaN                       3                  7                3                         0           0           NaN              0            0              0            0  leaky_relu    0.1  glorot_normal             plus          10        10000    ADAMAX                 0.0001         0.9        20000    quadratic    82     RIMSU128_hTNG2nsvdO_Sinit1_002_F8_IK7_NLleaky_relu_82_211012121338    0.014457  0.029068          47.224670        64.820404    0.014400          0.011435        0.027241           0.000924         0.001258\n",
+       "3     10     1      True            False     lrelu4p         0.1          1.0        8             2.0            3       4                  2        2                     NaN                 NaN                       3                 11                3                         0           0           NaN              0            0              0            0        relu    0.1  glorot_normal             plus          10        10000    ADAMAX                 0.0001         0.9        20000    quadratic    82          RIMSU128_hTNG2nsvdO_Sinit1_004_F8_IK11_NLrelu_82_211012122230    0.012288  0.026603          64.159100        54.059610    0.011803          0.009800        0.024721           0.001193         0.001244"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hparams = pd.read_csv(os.path.join(result_dir, \"RIMSU128_hTNG2nsvdO_Sinit1.csv\"), index_col=0)\n",
+    "histories = {}\n",
+    "for file in hparams[\"experiment_id\"]:\n",
+    "    histories.update({file: pd.read_csv(os.path.join(result_dir, file + \".csv\"), index_col=0).to_dict()})\n",
+    "hparams.sort_values(by=\"train_source_cost\")#[[\"seed\", \"time_weights\", \"batch_size\", \"total_items\", \"train_cost\", \"train_chi_squared\", \"train_source_cost\", \"train_kappa_cost\", \"experiment_id\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05734527-c179-4336-83b4-ce71157b788b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hparams = pd.read_csv(os.path.join(result_dir, \"RIMSU512_hk128_TNG2nsO.csv\"), index_col=0)\n",
+    "\n",
+    "histories = {}\n",
+    "for file in hparams[\"experiment_id\"]:\n",
+    "    histories.update({file: pd.read_csv(os.path.join(result_dir, file + \".csv\"), index_col=0).to_dict()})\n",
+    "hparams[[\"seed\", \"time_weights\", \"batch_size\", \"total_items\", \"train_cost\", \"train_chi_squared\", \"train_source_cost\", \"train_kappa_cost\", \"experiment_id\"]].sort_values(by=\"train_source_cost\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "polished-universal",
    "metadata": {},
@@ -2851,9 +3270,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8",
+   "display_name": "censai",
    "language": "python",
-   "name": "python3"
+   "name": "censai"
   },
   "language_info": {
    "codemirror_mode": {
